# RUST_KUP

./: .gitignore
Assignments/assignment-2/: Cargo.toml
Assignments/assignment-2/src/: check_leap.rs  linear_binary.rs  main.rs  merge_sort.rs
Assignments/assignment-3/: .gitignore  Cargo.toml
Assignments/assignment-3/src/: duplicate_characters.rs  is_palindrome.rs  main.rs  rotate_string.rs
Assignments/assignment-5/: Cargo.toml
Assignments/assignment-5/src/: lib.rs  test.rs
Assignments/assignment-5/src/coordinate/: check_coordinate.rs
Assignments/assignment-5/src/ipcheck/: ip_check.rs
Assignments/assignment_1/: Cargo.toml
Assignments/assignment_1/src/: fibo.rs  main.rs
Assignments/assignment_4/: Cargo.toml
Assignments/assignment_4/src/: complex.rs  main.rs  student_score.rs
Assignments/delete_update_file/: Cargo.toml
Assignments/delete_update_file/src/: main.rs  test.rs
Assignments/delete_update_file/src/handler/: handlers.rs
Assignments/google_hit/: Cargo.toml
Assignments/google_hit/src/: main.rs
Assignments/number_manipulation/: Cargo.toml
Assignments/number_manipulation/src/: main.rs  test.rs
Assignments/number_manipulation/src/operation/: armstrong.rs  automorphic.rs  matrix_multiplication.rs  palindrome.rs  (+1 more)
Assignments/poke_api_hit/: Cargo.toml
Assignments/poke_api_hit/src/: lib.rs  main.rs  test.rs
Assignments/poke_api_hit/src/file/: json.rs
Assignments/rocket-post/: Cargo.toml  Rocket.toml
Assignments/rocket-post/src/: main.rs
Assignments/rocket_web/: Cargo.toml
Assignments/rocket_web/src/: launch.rs  lib.rs  test.rs
