[package]
name = "google_hit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version ="0.5.0-rc.1", features=["json"]}
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "0.9"
serde = { version = "1.0", features = ["derive"] }